# signal_recognition_script

./: .~Щербаков Р.Э._Тестовое задание.pptx  README.md  description.ipynb  params.py  pyproject.toml  requirements.txt  run.py
data/: MeasuredSignals.csv  ReferenceSignal.csv
